# socks

./: README.md  pyproject.toml  testserver.py
socks/: __init__.py  classes.py
templates/: test.html
tests/: test_socks.py
