[tool.poetry]
name = "socks"
version = "0.1.1"
description = "Socks is a simple server framework, built only using the standard python library."
authors = ["PaddeCraft <70023807+PaddeCraft@users.noreply.github.com>"]
repository = "https://github.com/PaddeCraft/socks"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
